<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aryen.canyouguessit.MainActivity">

    <LinearLayout

        android:id="@+id/lay_plus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lay_nums"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/btnplus_x"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/plus" />

        <Button
            android:id="@+id/btnplus_y"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/plus" />

        <Button
            android:id="@+id/btnplus_z"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/plus" />

    </LinearLayout>

    <LinearLayout

        android:id="@+id/lay_nums"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lay_minus"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/num_1"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/one" />

        <TextView
            android:id="@+id/num_2"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/two" />

        <TextView
            android:id="@+id/num_3"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/three" />

    </LinearLayout>

    <LinearLayout

        android:id="@+id/lay_minus"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/btn_check">

        <Button
            android:id="@+id/btnminus_x"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/minus" />

        <Button
            android:id="@+id/btnminus_y"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/minus" />

        <Button
            android:id="@+id/btnminus_z"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/minus" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/check" />

    <TextView
        android:id="@+id/tv_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAlignment="textEnd"
        android:text=""
        android:layout_above="@+id/lay_plus"
        android:layout_centerHorizontal="true"
        tools:ignore="RtlCompat" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/restart"
        android:id="@+id/button"
        android:onClick="launchFirstActivity"/>

    <Button
        android:id="@+id/btn_resign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/resign" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_info"
        android:layout_below="@+id/btn_resign">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_output"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="" />

        </LinearLayout>

    </ScrollView>


</RelativeLayout>